--- a/.lfsconfig
+++ b/.lfsconfig
@@ -1,2 +1,2 @@
 [lfs]
-	url = https://18768042-d74d-41e5-9a58-f3bccc5de87a.netlify.app/.netlify/large-media
+	url = https://mdco-djp-prod.netlify.app/.netlify/large-media
